added paste option